--- a/SammysAuto/SammysAuto.csproj
+++ b/SammysAuto/SammysAuto.csproj
@@ -19,6 +19,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Update="Views\Cars\Delete.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
     <Content Update="Views\ServiceTypes\Delete.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
